<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
       <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    
      <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
      <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
 <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
      <string name="exit_group">退出</string>
      <string name="connect_conflict">同一帐号已在其他设备登录</string>
      
      
      
      
          <string name="app_name">IEC微圈</string>
    <string name="start">马上体验</string>
    <string name="account">账号</string>
    <string name="account_hint">工号、学号、公众号</string>
    <string name="psw">密码</string>
    <string name="psw_hint">初始密码为账号后六位</string>
    <string name="loss_psw">忘记密码</string>
	<string name="error_account_pasword">账号或密码错误</string>
    <string name="login">登录</string>
    <string name="login_ing">登录中...</string>
    <string name="login_hint">点击头像登录</string>
    <string name="public_num">公众号</string>
    <string name="instructor">辅导员</string>
    <string name="student">学生</string>
    <string name="collect">收   藏</string>
    <string name="send">发   布</string>
    <string name="drafts">草   稿</string>
    <string name="message">消   息</string>
    <string name="edit">编   辑</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_finish">已无更多</string>
    <string name="about">关于</string>
    <string name="home">首页</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="already_select">已选0张</string>
    <string name="local_photo">本地照片</string>
    <string name="take_photo">拍照</string>
    <string name="send_space">发       布</string>
    <string name="send_ing">发布中</string>
    <string name="photo_none">手机中还没有照片</string>
    <string name="publish_ing">发送中</string>
    <string name="sure">确定</string>
    <string name="finish">完成</string>
    <string name="title">标题</string>
    <string name="title_hint">标题(35字以内)</string>
    <string name="content">内容</string>
    <string name="photo">照片</string>
    <string name="save_drafts">存草稿</string>
    <string name="select_album">选择相册</string>
    <string name="prompt">提示</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string>
    <string name="dismiss">隐藏</string>
    <string name="main_body">正文</string>
    <string name="update_message">当前版本1.1 发现新版本%s 是否更新？</string>
    <string name="cleanCache_message">有%sM的缓存，立即清除？</string>
    <string name="sound_remind">声音提醒</string>
    <string name="auto_login">自动登录</string>
    <string name="auto_update">自动更新</string>
    <string name="opinion_revise_mail">邮箱绑定</string>
    <string name="opinion_revise_psw">修改密码</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="opinion_feedback_hint">请填写您的宝贵意见（150字以内）...</string>
    <string name="error_opinion_null">意见不能为空</string>
    <string name="error_opinion_tolong">意见不能超过150字!</string>
    <string name="error_comment_tolong">评论不能超过150字!</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_question">确定退出登录？</string>
    <string name="version">v1.1</string>
    <string name="current_version">已是最新版本</string>
    <string name="develop_team">开发团队</string>
    <string name="team">大学生IT创新工作室</string>
    <string name="setting">设   置</string>
    <string name="update">检测更新</string>
    <string name="cleanCache">清除缓存</string>
    <string name="share">分 享</string>
    <string name="delete">删除</string>
    <string name="none_collect">暂无收藏</string>
    <string name="none_follow">暂无关注</string>
    <string name="none_drafts">暂无草稿</string>
    <string name="none_fans">暂无粉丝</string>
    <string name="my_follow">我的关注</string>
    <string name="my_comment">我的评论</string>
    <string name="my_post">我的帖子</string>
    <string name="my_fans">我的粉丝</string>
    <string name="follow">添加关注</string>
    <string name="follow_cancel">取消关注</string>
    <string name="fans">粉丝：</string>
    <string name="post">帖子：</string>
    <string name="follower">关注：</string>
    <string name="user_resume">简介：</string>
    <string name="revise_info">修改资料</string>
    <string name="detail">详情</string>
    <string name="revise_img">自定义头像</string>
    <string name="name">姓名</string>
    <string name="name_hint">姓名:</string>
    <string name="intro_hint">简介:</string>
    <string name="now_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="comment">评论</string>
    <string name="comment_l">评论了</string>
    <string name="want_comment">我要评论</string>
    <string name="none_comment">暂无评论</string>
    <string name="all_comment">全部评论</string>
    <string name="replay">回复</string>
    <string name="reply_hint">回复:</string>
    <string name="my_reply">我的评论</string> 
    <string name="reply_me">评论我的</string>
    <string name="say_sth">说点什么吧...</string>
    <string name="please_wait">请稍后</string>
    <string name="net_error">网络请求失败,请稍后重试</string>
    <string name="refresh">刷新</string>
    <string name="no_data">什么也没有啊</string>
    <string name="me">我</string>
    <string name="saving">保存中</string>
    <string name="checking">检测中...</string>
    <string name="search">搜索</string>
    <string name="addfollow">加关注</string>
    <string name="please_login">请先登录</string>
    <string name="wait_send">请稍等，还有帖子正在发布中</string>
    <string name="success_send">帖子发布成功</string>
    <string name="success_opinion">意见反馈成功</string>
    <string name="fail_send">帖子发布失败！</string>
    <string name="null_fans">还没有人关注你哦</string>
    <string name="error_sdcard_null">sd卡不存在或不可用</string>
    <string name="error_comment_null">回复内容不能为空哦</string>
    <string name="error_news_null">标题和内容不能为空</string>
    <string name="error_news_tolong">标题不能超过35个字</string>
    <string name="error_account_pasword_null">账号或密码不能为空</string>
    <string name="error_intro_null">简介不能为空哦!</string>
    <string name="error_intro_tolong">简介不能超过35个字!</string>
    <string name="error_pic_tomuch">不能超过8张图片!</string>
    <string name="error_email_null">邮箱不能为空哦!</string>
    <string name="error_email_format">邮箱格式有误!</string>
    <string name="error_password_format">密码格式有误!</string>
    <string name="success_eamil_save">邮箱更改成功</string>
    <string name="success_password_save">密码更改成功</string>
    <string name="success_collect">收藏成功</string>
    <string name="success_intro">修改成功</string>
    <string name="success_drafts">草稿保存成功</string>
    <string name="fail_email_save">邮箱更改失败,请仔细检查密码和邮箱格式!</string>
    <string name="fail_eamil_exist">更改该邮箱被占用！</string>
    <string name="fail_password_pre">原始密码错误!</string>
    <string name="fail_password_save">密码更改失败!</string>
    <string name="error_data_null">请仔细填写新密码和原始密码!</string>
    <string name="error_password_not_same">两次密码不一致!</string>
    <string name="exit_title">下次记得再回来</string>
    
        <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
        <string name="tab_wechat">微信</string>
    <string name="tab_addressbook">通讯录</string>
    <string name="tab_moment">朋友圈</string>
    <string name="tab_me">我</string>
    
        <string name="about_nature">Nature can bring a lot of beauty into our lives. Nature has a way of affecting our moods and it can force us to change our plans. Nature is responsible for the sun, clouds, rain, and snow. When it is sunny and bright outside, we feel cheerful inside. When it is cloudy and rainy, we often feel gloomy. When there is a beautiful and starry night, the moonlight makes us feel romantic. When we see the leaves budding on a tree or when a timid flower pushes through the frozen ground, or when we smell the freshness of spring, new hope will always come to us. Nature is truly an intrinsic part of our lives. When we wake and see a sunrise, when we walk and feel a breeze, when we gaze at the mountains and the splendor of the seas, when we see the earth renew its beauty at each season of the year, and when the stars shine at night, we should be so very thankful to the Lord for giving us all these wonderful and miraculous things. Learning to become more aware of nature can truly have a good effect on our lives in the way we look at things and in the way we feel about ourselves.</string>
    <string name="empty_string">empty</string>
    <string name="retry">Retry</string>
</resources>