<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
        <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0.0px" >

        <LinearLayout
            android:id="@+id/content_back_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/back_layout_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:background="@drawable/arrow_back"
                android:gravity="center"
                android:includeFontPadding="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingLeft="6.0dip"
                android:singleLine="true"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/back_layout_selector"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dip"
                android:gravity="center"
                android:includeFontPadding="false"
                android:src="@drawable/icon_more" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/main_body"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>



    <itstudio.instructor.widget.StretchScrollView
        android:id="@+id/scroll_view"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/xlarge_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_publisher" />

                    <TextView
                        android:id="@+id/tv_anthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/small_text_size" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_time" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imageview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:lineSpacingMultiplier="1.2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text_size"/>

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="match_parent"
                    android:layout_height="35dip"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_round_bg"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="0dip"
                    android:paddingTop="0dip"
                    android:text="@string/say_sth"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/toolbox_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_comment_large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:text="@string/all_comment"
                        android:textSize="@dimen/xlarge_text_size" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/news"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <itstudio.instructor.xlistview.XListView
                    android:id="@+id/listview_comment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cacheColorHint="#00000000"
                    android:choiceMode="singleChoice"
                    android:divider="@color/toolbox_line"
                    android:dividerHeight="0.5dp"
                    android:drawSelectorOnTop="true"
                    android:focusable="false"
                    android:gravity="center"
                    android:listSelector="#00000000"
                    android:scrollbars="none" />

                <include layout="@layout/loading_layout" />

                <LinearLayout
                    android:id="@+id/view_load_nodata"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none_comment"
                        android:textColor="@color/light_black" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </itstudio.instructor.widget.StretchScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:background="#FAFAFA" >

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/bt_commment"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_round_bg"
            android:hint="@string/want_comment"
            android:minHeight="40dp" >
        </EditText>

        <Button
            android:id="@+id/bt_commment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/et_comment"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:minHeight="40dp"
            android:background="@drawable/save_btn_selector"
            android:text="@string/comment"
            android:textColor="@color/white" />
    </RelativeLayout>


    
</LinearLayout>
